[package]
name = "defitax"
version = "0.1.0"
authors = ["jmcph4 <jmcph4.github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
ethereum-types = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
reqwest = "0.11.3"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
serde_with = "1.8.0"
